--- a/brain-gaze-ui/src/amplifyconfiguration.json
+++ b/brain-gaze-ui/src/amplifyconfiguration.json
@@ -1,17 +1,31 @@
 {
   "aws_project_region": "us-east-2",
-  "aws_dynamodb_all_tables_region": "us-east-2",
-  "aws_dynamodb_table_schemas": [
+  "aws_cloud_logic_custom": [
     {
-      "tableName": "data-staging",
+      "name": "braingazeAPI",
+      "endpoint": "https://ha73ip8jod.execute-api.us-east-2.amazonaws.com/master",
       "region": "us-east-2"
     }
   ],
-  "aws_cloud_logic_custom": [
-    {
-      "name": "braingazeapi",
-      "endpoint": "https://6n8livmxr5.execute-api.us-east-2.amazonaws.com/staging",
-      "region": "us-east-2"
-    }
+  "aws_cognito_identity_pool_id": "us-east-2:dfac2858-5e1c-424c-8e35-4ebd3f9f77b2",
+  "aws_cognito_region": "us-east-2",
+  "aws_user_pools_id": "us-east-2_sV4yoQiBJ",
+  "aws_user_pools_web_client_id": "4936hqp2pamgo2ehkl2li440ag",
+  "oauth": {},
+  "aws_cognito_username_attributes": [],
+  "aws_cognito_social_providers": [],
+  "aws_cognito_signup_attributes": [
+    "EMAIL"
+  ],
+  "aws_cognito_mfa_configuration": "OFF",
+  "aws_cognito_mfa_types": [
+    "SMS"
+  ],
+  "aws_cognito_password_protection_settings": {
+    "passwordPolicyMinLength": 8,
+    "passwordPolicyCharacters": []
+  },
+  "aws_cognito_verification_mechanisms": [
+    "EMAIL"
   ]
 }
