--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -62,6 +62,24 @@
       "service": "Lambda"
     }
   },
+  "parameters": {
+    "AMPLIFY_function_storeCalibrationData_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "storeCalibrationData"
+        }
+      ]
+    },
+    "AMPLIFY_function_storeCalibrationData_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "storeCalibrationData"
+        }
+      ]
+    }
+  },
   "storage": {
     "braingazeData": {
       "providerPlugin": "awscloudformation",
