--- a/brain-gaze-ui/src/amplifyconfiguration.json
+++ b/brain-gaze-ui/src/amplifyconfiguration.json
@@ -27,5 +27,12 @@
   },
   "aws_cognito_verification_mechanisms": [
     "EMAIL"
+  ],
+  "aws_dynamodb_all_tables_region": "us-east-2",
+  "aws_dynamodb_table_schemas": [
+    {
+      "tableName": "braingazeDataTable-master",
+      "region": "us-east-2"
+    }
   ]
 }
